--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,6 @@
     android:background="#BC1580"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/winner"
-        android:layout_width="64dp"
-        android:layout_height="113dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="88dp"
-        android:text="TextView"
-        android:textColor="#00FFFF"
-        android:textSize="24sp"
-        android:visibility="gone"
-        app:fontFamily="casual"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.393"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentPlayer" />
-
     <View
         android:id="@+id/view"
         android:layout_width="414dp"
@@ -167,26 +151,40 @@
         android:layout_width="270dp"
         android:layout_height="74dp"
         android:layout_marginStart="61dp"
-        android:layout_marginLeft="61dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="136dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
         android:text="Hold"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rolldice" />
+        app:layout_constraintTop_toBottomOf="@+id/restart" />
 
     <Button
-        android:id="@+id/rolldice"
+        android:id="@+id/restart"
         android:layout_width="270dp"
         android:layout_height="74dp"
         android:layout_marginStart="61dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="80dp"
+        android:text="Restart"
+        android:textSize="30dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dice2" />
+
+    <Button
+        android:id="@+id/rolldice2"
+        android:layout_width="270dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="80dp"
         android:text="Tirar"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dice2" />
 
