--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="93dp"
-        android:layout_marginLeft="93dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="69dp"
-        android:layout_marginRight="69dp"
-        android:text="Two Dice Pig"
+        android:text="Juego del Cerdo"
         android:textColor="#ffffff"
         android:textSize="40dp"
         app:fontFamily="casual"
